--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-cli": "^2.9.6",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
