--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.27",
     "vue": "^2.6.14",
     "vue-cli": "^2.9.6",
     "vue-router": "^3.5.1",
